--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
 	"manifest_version": 2,
 	
-	"name": "Chrome Lock Beta",
+	"name": "WebLOCK Beta",
 	
-	"description": "Protect your Chrome browser with Password.!\nThe new Chrome Lock comes with many options and features and well designed web pages.",
+	"description": "Protect your Chrome browser with Password.!\nWebLOCK comes with many options and features and well designed web pages.",
 	
-	"version": "1.1.0",
+	"version": "1.0",
 	
 	"options_page": "options.html",
 	
